@startuml

title __TOWNHALL's Class Diagram__\n

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Address {
        - city : String
        - number : int
        - state : String
        - street : String
        - zip : String
        + Address()
        + Address()
        + getCity()
        + getNumber()
        + getState()
        + getStreet()
        + getZip()
        + setCity()
        + setNumber()
        + setState()
        + setStreet()
        + setZip()
        + toString()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Car {
        - color : String
        - engineSize : float
        - isElectric : boolean
        + Car()
        + getColor()
        + getEngineSize()
        + isElectric()
        + setColor()
        + setElectric()
        + setEngineSize()
        + toString()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Citizen {
        - purchaseDate : Date
        + Citizen()
        + Citizen()
        + getAddress()
        + getPurchaseDate()
        + setAddress()
        + setPurchaseDate()
        + toString()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.City {
        - name : String
        + City()
        + City()
        + getName()
        + setName()
        + toString()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Commercial {
        - isMall : boolean
        - numOfRetailStores : int
        - vehicleList : List<Vehicle>
        + Commercial()
        + Commercial()
        + calculateTaxes()
        + getNumOfRetailStores()
        + getVehicleList()
        + isMall()
        + setMall()
        + setNumOfRetailStores()
        + setVehicleList()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.CommercialTax {
        - productionTax : float
        - sewageTax : float
        - unionTax : float
        + CommercialTax()
        + getProductionTax()
        + getSewageTax()
        + getUnionTax()
        + setProductionTax()
        + setSewageTax()
        + setUnionTax()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Conventional {
        - numAxles : int
        + Conventional()
        + getNumAxles()
        + setNumAxles()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Employee {
        - employeeId : int
        - position : String
        + Employee()
        + Employee()
        + Employee()
        + toString()
    }
  }
  

  namespace com.example.hw2.townhall {
    abstract class com.example.hw2.townhall.Person {
        ~ DOB : Date
        ~ SSN : String
        ~ firstName : String
        ~ lastName : String
        + Person()
        + Person()
        + getDOB()
        + getFirstName()
        + getLastName()
        + getSSN()
        + setDOB()
        + setFirstName()
        + setLastName()
        + setSSN()
        + toString()
    }
  }
  

  namespace com.example.hw2.townhall {
    abstract class com.example.hw2.townhall.Property {
        - squareMeters : float
        - yearlyTaxes : float
        + Property()
        + Property()
        {abstract} + calculateTaxes()
        + getAddress()
        + getOwner()
        + getSquareMeters()
        + getYearlyTaxes()
        + setAddress()
        + setOwner()
        + setSquareMeters()
        + setYearlyTaxes()
        + toString()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Residential {
        - hasSwimmingPool : boolean
        - numBedrooms : int
        + Residential()
        + Residential()
        + calculateTaxes()
        + getNumBedrooms()
        + isHasSwimmingPool()
        + setHasSwimmingPool()
        + setNumBedrooms()
        + toString()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.ResidentialTax {
        - freewayTax : float
        - schoolTax : float
        + ResidentialTax()
        + getFreewayTax()
        + getSchoolTax()
        + setFreewayTax()
        + setSchoolTax()
    }
  }
  

  namespace com.example.hw2.townhall {
    abstract class com.example.hw2.townhall.Tax {
        - cityTax : float
        - countyTax : float
        - isRecurring : boolean
        + Tax()
        + getCityTax()
        + getCountyTax()
        + isRecurring()
        + setCityTax()
        + setCountyTax()
        + setRecurring()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.TownHallTest {
        {static} - citizens : ArrayList<Person>
        {static} - properties : ArrayList<Property>
        {static} - taxesOwed : float
        {static} + findProperty()
        {static} + main()
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Truck {
        - isForkLift : boolean
        - wheels : int
        + Truck()
        + getWheels()
        + isForkLift()
        + setForkLift()
        + setWheels()
    }
  }
  

  namespace com.example.hw2.townhall {
    abstract class com.example.hw2.townhall.Vehicle {
        - brand : String
        - licensePlate : String
        - model : String
        + Vehicle()
        + getBrand()
        + getLicensePlate()
        + getModel()
        + setBrand()
        + setLicensePlate()
        + setModel()
    }
  }
  

  com.example.hw2.townhall.Car -up-|> com.example.hw2.townhall.Vehicle
  com.example.hw2.townhall.Citizen -up-|> com.example.hw2.townhall.Person
  com.example.hw2.townhall.Citizen o-- com.example.hw2.townhall.Address : address
  com.example.hw2.townhall.Commercial -up-|> com.example.hw2.townhall.Property
  com.example.hw2.townhall.CommercialTax -up-|> com.example.hw2.townhall.Tax
  com.example.hw2.townhall.Conventional -up-|> com.example.hw2.townhall.Vehicle
  com.example.hw2.townhall.Employee -up-|> com.example.hw2.townhall.Person
  com.example.hw2.townhall.Property o-- com.example.hw2.townhall.Address : address
  com.example.hw2.townhall.Property o-- com.example.hw2.townhall.Person : owner
  com.example.hw2.townhall.Residential -up-|> com.example.hw2.townhall.Property
  com.example.hw2.townhall.ResidentialTax -up-|> com.example.hw2.townhall.Tax
  com.example.hw2.townhall.Truck -up-|> com.example.hw2.townhall.Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
